--- a/index.html
+++ b/index.html
@@ -76,16 +76,104 @@ form button:hover{background:#e6d5c3;transform:translateY(-2px)}
 .modal p{color:#555;color:var(--txt);opacity:.9;line-height:1.6}
 .close{position:absolute;top:1.2rem;right:1.2rem;font-size:1.8rem;cursor:pointer;color:#ccc;z-index:10;transition:.3s}
 .close:hover{color:var(--accent)}
+.hamburger {
+  cursor: pointer;
+  z-index: 2001; /* pastikan di atas elemen lain */
+  position: relative;
+}
+
 
 footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:.9rem;border-top:1px solid var(--border);margin-top:3rem}
 
 /* Responsive */
+@media (max-width: 1024px) {
+  .hero h1 { font-size: 2.6rem; }
+  .hero p { font-size: 1rem; }
+  .carousel-slide img { height: 320px; }
+  .milestone h3 { font-size: 2.4rem; }
+}
+
+/* Mobile (max 768px) */
 @media (max-width: 768px) {
-  .nav-links{display:none;position:absolute;top:100%;left:0;width:100%;background:var(--bg);flex-direction:column;padding:1rem 0;box-shadow:0 5px 15px rgba(0,0,0,.1)}
-  .nav-links.active{display:flex}
-  .hamburger,.mode-toggle{display:block}
-  .hero h1{font-size:2.2rem}
-  .carousel-caption{font-size:.9rem}
+  .container { padding: 0 1rem; }
+  nav { flex-wrap: wrap; }
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: var(--bg);
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 0;
+    box-shadow: 0 5px 15px rgba(0,0,0,.1);
+  }
+  .nav-links.active { display: flex; }
+
+  .hamburger, .mode-toggle { display: block; }
+
+  .hero {
+    padding: 100px 0 60px;
+  }
+  .hero h1 {
+    font-size: 2rem;
+    line-height: 1.3;
+  }
+  .hero p {
+    font-size: .95rem;
+    padding: 0 1rem;
+  }
+  .btn {
+    padding: .8rem 1.6rem;
+    font-size: .95rem;
+  }
+
+  .carousel-slide img {
+    height: 250px;
+  }
+  .carousel-caption {
+    font-size: .8rem;
+    bottom: 1rem;
+    left: 1rem;
+    padding: .6rem 1rem;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+  .card img {
+    height: 200px;
+  }
+
+  .milestone {
+    padding: 1.5rem;
+    margin: 2rem auto;
+  }
+  .milestone h3 {
+    font-size: 2.2rem;
+  }
+
+  .contact {
+    padding: 70px 1rem;
+    margin: 2rem 0;
+  }
+  form button {
+    font-size: .95rem;
+  }
+  footer {
+    padding: 2rem 1rem;
+  }
+}
+
+/* Small phones (max 480px) */
+@media (max-width: 480px) {
+  .hero h1 { font-size: 1.8rem; }
+  .hero p { font-size: .9rem; }
+  .carousel-slide img { height: 200px; }
+  .card img { height: 180px; }
+  .milestone h3 { font-size: 1.8rem; }
 }
 </style>
 </head>
@@ -94,18 +182,21 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
 <header>
   <div class="container">
     <nav>
-      <div class="logo">Wangsa Studio</div>
-      <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#rooms">Rooms</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <div class="mode-toggle" onclick="document.body.classList.toggle('dark')"><i class="fas fa-moon"></i></div>
-      <div class="hamburger" onclick="this.previousElementSibling.classList.toggle('active')">
-        <span></span><span></span><span></span>
-      </div>
-    </nav>
+  <div class="logo">Wangsa Studio</div>
+  <ul class="nav-links" id="navLinks">
+    <li><a href="#">Home</a></li>
+    <li><a href="#rooms">Rooms</a></li>
+    <li><a href="#gallery">Gallery</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+  <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
+    <i class="fas fa-moon"></i>
+  </div>
+  <div class="hamburger" id="hamburger">
+    <span></span><span></span><span></span>
+  </div>
+</nav>
+
   </div>
 </header>
 
@@ -245,10 +336,15 @@ const observer = new IntersectionObserver(entries => {
 
 document.querySelectorAll('.card').forEach(card => observer.observe(card));
 
-// Mobile menu toggle fix
-document.querySelector('.hamburger').addEventListener('click', function() {
-  this.previousElementSibling.classList.toggle('active');
+// Hamburger toggle for mobile
+const hamburger = document.getElementById('hamburger');
+const navLinks = document.getElementById('navLinks');
+
+hamburger.addEventListener('click', () => {
+  navLinks.classList.toggle('active');
 });
+
+
 </script>
 </body>
 </html>
