--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
         <p>SSL Console • Pro Tools • Full Band</p>
         <p class="price">$120/hour</p>
       </div>
-      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035138-bd2f6f5232ad?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80','$90/hr')">
+      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000','$90/hr')">
         <img src=https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000 alt="Live Room A">
         <h4>Live Room A</h4>
         <p>Sound Mixing • Editing Tools • 300 sq ft</p>
