--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 :root{--bg:#f5e6d3;--txt:#0a0b06;--btn:#f5e6d3;--card:#fff;--border:#eee;--accent:#273236}
@@ -25,7 +27,7 @@ nav{display:flex;justify-content:space-between;align-items:center}
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
 .hamburger span,.mode-toggle i{display:block;width:22px;height:2px;background:var(--txt);margin:5px 0;transition:.3s}
-.mode-toggle i{height:auto;font-size:1.2rem;color:var()}
+.mode-toggle i{height:auto;font-size:1.2rem;color:var(--txt)}
 
 .hero{padding:130px 0 80px;text-align:center}
 .hero h1{font:700 3rem 'Playfair Display',serif;margin-bottom:.5rem;color:var(--accent)}
@@ -186,7 +188,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
+  <div class="mode-toggle" id="modeToggle">
     <i class="fas fa-moon"></i>
   </div>
   <div class="hamburger" id="hamburger">
@@ -337,10 +339,17 @@ document.querySelectorAll('.card').forEach(card => observer.observe(card));
 const hamburger = document.getElementById('hamburger');
 const navLinks = document.getElementById('navLinks');
 
-hamburger.addEventListener('click', () => {
+hamburger.addEventListener('click', (e) => {
+  e.stopPropagation(); // cegah klik menutup menu
   navLinks.classList.toggle('active');
 });
 
+// Tutup menu jika klik di luar
+document.addEventListener('click', (e) => {
+  if (!navLinks.contains(e.target) && !hamburger.contains(e.target)) {
+    navLinks.classList.remove('active');
+  }
+});
 
 </script>
 </body>
