--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Wangsa Studio | Professional Recording Studio</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-MdP0qCFLcUuqzW6v3UZa3HwQACx8GBNYE0rLxfnvXw+3rA0I8PlUdt8n1WcwkzIIt5B4qPS0GpD1gS1D/ZVYhQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -27,7 +25,15 @@ nav{display:flex;justify-content:space-between;align-items:center}
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
 .hamburger span,.mode-toggle i{display:block;width:22px;height:2px;background:var(--txt);margin:5px 0;transition:.3s}
-.mode-toggle i{height:auto;font-size:1.2rem;color:var(--txt)}
+.mode-toggle i {
+  color: var(--txt);
+  font-size: 1.4rem;
+  transition: color 0.3s ease;
+}
+body.dark .mode-toggle i {
+  color: #ffd700; /* kuning seperti bulan */
+}
+
 
 .hero{padding:130px 0 80px;text-align:center}
 .hero h1{font:700 3rem 'Playfair Display',serif;margin-bottom:.5rem;color:var(--accent)}
@@ -188,8 +194,10 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <div class="mode-toggle" id="modeToggle">
-    <i class="fas fa-moon"></i>
+  <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
+  <i class="fa-solid fa-moon"></i>
+</div>
+
   </div>
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
