--- a/index.html
+++ b/index.html
@@ -25,15 +25,7 @@ nav{display:flex;justify-content:space-between;align-items:center}
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
 .hamburger span,.mode-toggle i{display:block;width:22px;height:2px;background:var(--txt);margin:5px 0;transition:.3s}
-.mode-toggle i {
-  color: var(--txt);
-  font-size: 1.4rem;
-  transition: color 0.3s ease;
-}
-body.dark .mode-toggle i {
-  color: #ffd700; /* kuning seperti bulan */
-}
-
+.mode-toggle i{height:auto;font-size:1.2rem;color:var(--txt)}
 
 .hero{padding:130px 0 80px;text-align:center}
 .hero h1{font:700 3rem 'Playfair Display',serif;margin-bottom:.5rem;color:var(--accent)}
