--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Wangsa Studio | Professional Recording Studio</title>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-MdP0qCFLcUuqzW6v3UZa3HwQACx8GBNYE0rLxfnvXw+3rA0I8PlUdt8n1WcwkzIIt5B4qPS0GpD1gS1D/ZVYhQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -186,10 +187,8 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
-  <i class="fa-solid fa-moon"></i>
-</div>
-
+  <div class="mode-toggle" id="modeToggle">
+    <i class="fas fa-moon"></i>
   </div>
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
