--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Wangsa Studio | Professional Recording Studio</title>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 :root{--bg:#f5e6d3;--txt:#0a0b06;--btn:#f5e6d3;--card:#fff;--border:#eee;--accent:#273236}
@@ -187,7 +186,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <div class="mode-toggle" id="modeToggle">
+  <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
     <i class="fas fa-moon"></i>
   </div>
   <div class="hamburger" id="hamburger">
@@ -245,7 +244,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
         <p>SSL Console • Pro Tools • Full Band</p>
         <p class="price">$120/hour</p>
       </div>
-      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000','$90/hr')">
+      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035138-bd2f6f5232ad?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80','$90/hr')">
         <img src=https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000 alt="Live Room A">
         <h4>Live Room A</h4>
         <p>Sound Mixing • Editing Tools • 300 sq ft</p>
@@ -338,17 +337,10 @@ document.querySelectorAll('.card').forEach(card => observer.observe(card));
 const hamburger = document.getElementById('hamburger');
 const navLinks = document.getElementById('navLinks');
 
-hamburger.addEventListener('click', (e) => {
-  e.stopPropagation(); // cegah klik menutup menu
+hamburger.addEventListener('click', () => {
   navLinks.classList.toggle('active');
 });
 
-// Tutup menu jika klik di luar
-document.addEventListener('click', (e) => {
-  if (!navLinks.contains(e.target) && !hamburger.contains(e.target)) {
-    navLinks.classList.remove('active');
-  }
-});
 
 </script>
 </body>
