--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  integrity="sha512-dI+YH3RJoNsjbq6FduVu4zZKj0M8g7dGvjI7K7xA9gVxKQ1XhDlEw3TDVQ5jzQX9cAt1zq5zqM3xU9TjzW+GOw=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 :root{--bg:#f5e6d3;--txt:#0a0b06;--btn:#f5e6d3;--card:#fff;--border:#eee;--accent:#273236}
@@ -25,7 +33,17 @@ nav{display:flex;justify-content:space-between;align-items:center}
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
 .hamburger span,.mode-toggle i{display:block;width:22px;height:2px;background:var(--txt);margin:5px 0;transition:.3s}
-.mode-toggle i{height:auto;font-size:1.2rem;color:var(--txt)}
+.mode-toggle i {
+  font-size: 1.4rem;
+  color: #222;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+body.dark .mode-toggle i {
+  color: #ffd700; /* kuning bulan saat mode gelap */
+}
+
 
 .hero{padding:130px 0 80px;text-align:center}
 .hero h1{font:700 3rem 'Playfair Display',serif;margin-bottom:.5rem;color:var(--accent)}
@@ -186,9 +204,9 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
-    <i class="fas fa-moon"></i>
-  </div>
+  <div class="mode-toggle" onclick="toggleDarkMode()">
+  <i class="fas fa-moon"></i>
+</div>
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
