--- a/index.html
+++ b/index.html
@@ -30,17 +30,23 @@ nav{display:flex;justify-content:space-between;align-items:center}
 .nav-links a{color:var(--txt);text-decoration:none;font-weight:500;transition:.2s}
 .nav-links a:hover{color:var(--accent)}
 
+/* Pastikan tidak tertutup elemen lain */
+.navbar,
+.mode-toggle,
+.mode-toggle i {
+  pointer-events: auto;
+}
+
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
-.hamburger span,.mode-toggle i{display:block;width:22px;height:2px;background:var(--txt);margin:5px 0;transition:.3s}
+
 /* ==== Mode Toggle Button ==== */
 .mode-toggle {
-  cursor: pointer;
-  z-index: 1000;
+ 
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: center;
+  
   width: 40px;
   height: 40px;
 }
@@ -67,8 +73,6 @@ nav{display:flex;justify-content:space-between;align-items:center}
   font-family: "Font Awesome 5 Free" !important;
   font-weight: 900;
 }
-
-
 .mode-toggle {
   text-decoration: none !important;
   border: none !important;
@@ -80,12 +84,7 @@ body.dark .mode-toggle i {
   color: #ffd700; /* kuning bulan */
 }
 
-/* Pastikan tidak tertutup elemen lain */
-.navbar,
-.mode-toggle,
-.mode-toggle i {
-  pointer-events: auto;
-}
+
 
 
 .hero{padding:130px 0 80px;text-align:center}
@@ -254,9 +253,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
     </div>
 
     <div class="mode-toggle" id="modeToggle">
-      <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" viewBox="0 0 512 512" fill="currentColor">
-    <path d="M279.135 512c78.787 0 149.51-35.807 195.472-91.678C386.728 426.707 312.193 358.7 312.193 272.14c0-86.613 74.534-154.619 162.414-148.183C428.645 35.768 357.922 0 279.135 0 125.219 0 0 114.615 0 256s125.219 256 279.135 256z"/>
-  </svg>
+      <i class="fas fa-moon"></i>
     </div>
   </nav>
 
