--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@ nav{display:flex;justify-content:space-between;align-items:center}
 
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
-
+.hamburger span,.mode-toggle i{display:block;width:22px;height:2px;margin:5px 0;transition:.3s}
 /* ==== Mode Toggle Button ==== */
 .mode-toggle {
- 
+  cursor: pointer;
+  z-index: 1000;
   position: relative;
   display: flex;
   align-items: center;
-  
+  justify-content: center;
   width: 40px;
   height: 40px;
 }
@@ -73,6 +74,7 @@ nav{display:flex;justify-content:space-between;align-items:center}
   font-family: "Font Awesome 5 Free" !important;
   font-weight: 900;
 }
+
 .mode-toggle {
   text-decoration: none !important;
   border: none !important;
