--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ nav{display:flex;justify-content:space-between;align-items:center}
 
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
-.hamburger span,.mode-toggle i{display:block;width:22px;height:2px;margin:5px 0;transition:.3s}
+.hamburger span,.mode-toggle i{display:block;width:22px;height:2px;background:var(--txt);margin:5px 0;transition:.3s}
 /* ==== Mode Toggle Button ==== */
 .mode-toggle {
   cursor: pointer;
