--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@ nav{display:flex;justify-content:space-between;align-items:center}
   font-weight: 900;
 }
 
+.mode-toggle {
+  text-decoration: none !important;
+  border: none !important;
+}
+
 /* Saat dark mode aktif */
 body.dark .mode-toggle i {
   color: #ffd700; /* kuning bulan */
