--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ nav{display:flex;justify-content:space-between;align-items:center}
   cursor: pointer;
   width: 40px;
   height: 40px;
-  position: absolute;
+  position: relative;
   left: 50%;
   transform: translateX(-50%);
 }
