--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ nav{display:flex;justify-content:space-between;align-items:center}
   cursor: pointer;
   width: 40px;
   height: 40px;
+  position: relative;
 }
 
 .mode-toggle i {
