--- a/index.html
+++ b/index.html
@@ -30,70 +30,52 @@ nav{display:flex;justify-content:space-between;align-items:center}
 .nav-links a{color:var(--txt);text-decoration:none;font-weight:500;transition:.2s}
 .nav-links a:hover{color:var(--accent)}
 
-/* Pastikan tidak tertutup elemen lain */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 1.5rem;
-  background: var(--bg);
-  position: relative;
-  z-index: 100;
-}
-.mode-toggle,
-.mode-toggle i {
-  pointer-events: auto;
-}
-
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
 .hamburger span,.mode-toggle i{display:block;width:22px;height:22px;margin:5px 0;transition:.3s}
-/* ==== Mode Toggle Button ==== */
+
+/* Mode Toggle button */
+
+.mode-toggle,
+.mode-toggle i {
+    pointer-events: auto;
+}
 .mode-toggle {
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  width: 40px;
-  height: 40px;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 10px;
+    height: 25px;
 }
 
 .mode-toggle i {
-  font-size: 1.3rem;
-  color: #222;
-  transition: color 0.3s ease;
+    font-size: 1.3rem;
+    color: #222;
+    transition: color 0.3s ease;
 }
 .mode-toggle i {
-  text-decoration: none !important;
-  border: none !important;
-  box-shadow: none !important;
-  position: relative;
-  top: 0;
+    text-decoration: none !important;
+    border: none !important;
+    box-shadow: none !important;
+    position: relative;
+    top: 0;
 }
 
-.mode-toggle i::before {
-  text-decoration: none !important;
-  border: none !important;
-  box-shadow: none !important;
-}
 .mode-toggle i {
-  font-family: "Font Awesome 5 Free" !important;
-  font-weight: 900;
+    font-family: "Font Awesome 5 free" !important;
+    font-weight: 900;
 }
 
 .mode-toggle {
-  text-decoration: none !important;
-  border: none !important;
+    text-decoration: none !important;
+    border: none !important;
 }
 
-/* Saat dark mode aktif */
 body.dark .mode-toggle i {
-  color: #ffd700;
+    color: #ffd700;
 }
-
-
-
 
 .hero{padding:130px 0 80px;text-align:center}
 .hero h1{font:700 3rem 'Playfair Display',serif;margin-bottom:.5rem;color:var(--accent)}
@@ -240,31 +222,39 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
   .card img { height: 180px; }
   .milestone h3 { font-size: 1.8rem; }
 }
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+    background: var(--bg);
+    position: relative;
+    z-index: 100;
+}
 </style>
 </head>
 <body>
 
 <header>
   <div class="container">
-   <nav class="navbar">
-    <div class="logo">Wangsa Studio</div>
-
-    <div class="nav-links">
-      <a href="#home">Home</a>
-      <a href="#rooms">Rooms</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact</a>
-    </div>
-
-    <div class="hamburger">
-      <i class="fas fa-bars"></i>
-    </div>
-
-    <div class="mode-toggle" id="modeToggle">
-      <i class="fas fa-moon"></i>
-    </div>
-
-  </nav>
+    <nav>
+  <div class="logo">Wangsa Studio</div>
+  <ul class="nav-links" id="navLinks">
+    <li><a href="#">Home</a></li>
+    <li><a href="#rooms">Rooms</a></li>
+    <li><a href="#gallery">Gallery</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+  <div class="mode-toggle" id="modeToggle">
+    <i class="fas fa-moon"></i>
+  </div>
+  
+  <div class="hamburger" id="hamburger">
+    <i class="fas fa-bars"></i>
+  </div>
+  
+</nav>
 
   </div>
 </header>
@@ -316,7 +306,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
         <p>SSL Console • Pro Tools • Full Band</p>
         <p class="price">$120/hour</p>
       </div>
-      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035138-bd2f6f5232ad?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80','$90/hr')">
+      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000','$90/hr')">
         <img src=https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000 alt="Live Room A">
         <h4>Live Room A</h4>
         <p>Sound Mixing • Editing Tools • 300 sq ft</p>
@@ -406,15 +396,17 @@ const observer = new IntersectionObserver(entries => {
 document.querySelectorAll('.card').forEach(card => observer.observe(card));
 
 // Hamburger toggle for mobile
+
 const toggle = document.getElementById('modeToggle');
-  toggle.addEventListener('click', () => {
-    document.body.classList.toggle('dark');
-  });
+    toggle.addEventListener('click', () => {
+        document.body.classList.toggle('dark');
+    });
 const navLinks = document.getElementById('navLinks');
 const hamburger = document.getElementById('hamburger');
-  hamburger.addEventListener('click', () => {
-  navLinks.classList.toggle('active');
+    hamburger.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
 });
+    
 
 
 
