--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
   <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
     <i class="fas fa-moon"></i>
   </div>
+  /*problem in here*/
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
