--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  integrity="sha512-dI+YH3RJoNsjbq6FduVu4zZKj0M8g7dGvjI7K7xA9gVxKQ1XhDlEw3TDVQ5jzQX9cAt1zq5zqM3xU9TjzW+GOw=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 :root{--bg:#f5e6d3;--txt:#0a0b06;--btn:#f5e6d3;--card:#fff;--border:#eee;--accent:#273236}
@@ -24,8 +32,50 @@ nav{display:flex;justify-content:space-between;align-items:center}
 
 .hamburger,.mode-toggle{display:none;cursor:pointer}
 .hamburger {cursor: pointer;z-index: 2001;position: relative;}
-.hamburger span,.mode-toggle i{display:block;width:22px;height:2px;background:var(--txt);margin:5px 0;transition:.3s}
-.mode-toggle i{height:auto;font-size:1.2rem;color:var(--txt)}
+.hamburger span,.mode-toggle i{display:block;width:22px;height:22px;margin:5px 0;transition:.3s}
+
+/* Mode Toggle button */
+
+.mode-toggle,
+.mode-toggle i {
+    pointer-events: auto;
+}
+.mode-toggle {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 10px;
+    height: 25px;
+}
+
+.mode-toggle i {
+    font-size: 1.3rem;
+    color: #222;
+    transition: color 0.3s ease;
+}
+.mode-toggle i {
+    text-decoration: none !important;
+    border: none !important;
+    box-shadow: none !important;
+    position: relative;
+    top: 0;
+}
+
+.mode-toggle i {
+    font-family: "Font Awesome 5 free" !important;
+    font-weight: 900;
+}
+
+.mode-toggle {
+    text-decoration: none !important;
+    border: none !important;
+}
+
+body.dark .mode-toggle i {
+    color: #ffd700;
+}
 
 .hero{padding:130px 0 80px;text-align:center}
 .hero h1{font:700 3rem 'Playfair Display',serif;margin-bottom:.5rem;color:var(--accent)}
@@ -172,6 +222,16 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
   .card img { height: 180px; }
   .milestone h3 { font-size: 1.8rem; }
 }
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+    background: var(--bg);
+    position: relative;
+    z-index: 100;
+}
 </style>
 </head>
 <body>
@@ -186,12 +246,14 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <div class="mode-toggle" onclick="document.body.classList.toggle('dark')">
+  <div class="mode-toggle" id="modeToggle">
     <i class="fas fa-moon"></i>
   </div>
+  
   <div class="hamburger" id="hamburger">
-    <span></span><span></span><span></span>
+    <i class="fas fa-bars"></i>
   </div>
+  
 </nav>
 
   </div>
@@ -244,7 +306,7 @@ footer{text-align:center;padding:2.5rem 0;color:#888;color:var(--txt);font-size:
         <p>SSL Console • Pro Tools • Full Band</p>
         <p class="price">$120/hour</p>
       </div>
-      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035138-bd2f6f5232ad?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80','$90/hr')">
+      <div class="card" onclick="openModal('Live Room A','Spacious live room with treated acoustics, grand piano, and isolated drum booth. Ideal for bands and orchestral recordings.','https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000','$90/hr')">
         <img src=https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?fm=jpg&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bXVzaWMlMjBzdHVkaW98ZW58MHx8MHx8fDA%3D&ixlib=rb-4.1.0&q=60&w=3000 alt="Live Room A">
         <h4>Live Room A</h4>
         <p>Sound Mixing • Editing Tools • 300 sq ft</p>
@@ -334,12 +396,18 @@ const observer = new IntersectionObserver(entries => {
 document.querySelectorAll('.card').forEach(card => observer.observe(card));
 
 // Hamburger toggle for mobile
-const hamburger = document.getElementById('hamburger');
-const navLinks = document.getElementById('navLinks');
 
-hamburger.addEventListener('click', () => {
-  navLinks.classList.toggle('active');
+const toggle = document.getElementById('modeToggle');
+    toggle.addEventListener('click', () => {
+        document.body.classList.toggle('dark');
+    });
+const navLinks = document.getElementById('navLinks');
+const hamburger = document.getElementById('hamburger');
+    hamburger.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
 });
+    
+
 
 
 </script>
